--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 
 [Connection]
-  LocalAddress = "0.0.0.0:19132"
-  RemoteAddress = ""
+  LocalAddress = "0.0.0.0:55654"
+  RemoteAddress = "127.0.0.1:19132"
